# scipion-em-cryosparc2

./: CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_and_tag.yml
cryosparc2/: __init__.py  bibtex.py  constants.py  protocols.conf  utils.py  wizards.py
cryosparc2/convert/: __init__.py  convert.py  cs2Start.py  dataimport.py
cryosparc2/protocols/: __init__.py  protocol_base.py  protocol_cryorefine.py  protocol_cryosparc2d.py  protocol_cryosparc_3D_classification.py  protocol_cryosparc_3D_flex_data_prepare.py  protocol_cryosparc_3D_flex_generator.py  protocol_cryosparc_3D_flex_mesh_prepare.py  protocol_cryosparc_3D_flex_reconstruction.py  protocol_cryosparc_3D_flex_training.py  protocol_cryosparc_3d_variability.py  protocol_cryosparc_3d_variability_display.py  protocol_cryosparc_ab.py  protocol_cryosparc_blob_picker.py  protocol_cryosparc_fullframe_corr.py  protocol_cryosparc_global_ctf_refinement.py  protocol_cryosparc_helical_refinement.py  protocol_cryosparc_homogeneous_reconstruction.py  protocol_cryosparc_homogeneous_refine.py  protocol_cryosparc_local_ctf_refinement.py  protocol_cryosparc_local_refine.py  protocol_cryosparc_naive_local_refine.py  protocol_cryosparc_new_3D_classification.py  protocol_cryosparc_new_local_refine.py  protocol_cryosparc_new_nonuniform_refine.py  protocol_cryosparc_nonuniform_refine.py  protocol_cryosparc_part_subtract.py  protocol_cryosparc_patch_ctf_estimation.py  protocol_cryosparc_sharppening.py  protocol_cryosparc_symmetry_expansion.py
cryosparc2/tests/: __init__.py  (+3 more)
(+6 files in other folders)
