[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-cryosparc2"
dynamic = ["version", "dependencies"]

authors = [
    {name = "Yunior Fonseca", email = "cfonseca@cnb.csic.es"},
    {name = "Szu-Chi Chung", email = "phonchi@stat.sinica.edu.tw"},
]
description = "Plugin to use cryoSPARC2 programs within the Scipion framework"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["scipion", "electron-microscopy", "cryo-em", "structural-biology", "image-processing", "scipion-3.0", "cryoSPARC"]
license = {text = "GNU General Public License v3 (GPLv3)"}

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-cryosparc2"
Repository = "https://github.com/scipion-em/scipion-em-cryosparc2"
Issues = "https://github.com/scipion-em/scipion-em-cryosparc2/issues"

[tool.setuptools.package-data]
"cryosparc2" = ["protocols.conf", "cryosparc2_logo.png"]

[project.entry-points."pyworkflow.plugin"]
cryosparc2 = "cryosparc2"

[tool.setuptools.dynamic]
version = {attr = "cryosparc2.__version__"}
dependencies = {file = ["requirements.txt"]}

